# FastAPITemplate

./: .cspell.json  .dockerignore  .gitignore  .pre-commit-config.yaml  .yamlfmt  LICENSE  Makefile  README.md  alembic.ini  config_example.yaml  pyproject.toml
deployment/: Dockerfile  docker-compose.yml
deployment/postgres/: .env.example  postgresql.conf
docs/: README_ru.md  openapi.json
src/app/app/common/: exception.py
src/app/app/common/port/: __init__.py  actor_provider.py  session.py
src/app/app/user/: exception.py
src/app/app/user/dto/: user.py
src/app/app/user/port/: reader.py
src/app/app/user/query/: __init__.py  get_by_id.py
src/app/app/user/service/: __init__.py  service.py
src/app/config/: auth_policy.py  configuration.py  db.py  log.py  redis.py
src/app/domain/common/: exception.py
src/app/domain/common/actor/: __init__.py  value_object.py
src/app/domain/common/port/: __init__.py  clock.py
src/app/domain/user/: entity.py
src/app/domain/user/enums/: __init__.py  role.py
src/app/domain/user/exception/: __init__.py  user.py
src/app/domain/user/port/: repository.py
src/app/domain/user/service/: __init__.py  service.py
src/app/domain/user/value_object/: __init__.py  ident.py
src/app/infra/common/: clock.py  uuid_generator.py
src/app/infra/common/bootstrap/: __init__.py  bootstrap.py  infrastructure.py
src/app/infra/common/session/: __init__.py  mapper.py  session.py
src/app/infra/framework/sql_alchemy/migration/: env.py
src/app/infra/framework/sql_alchemy/migration/versions/: 0e7af3faf5a7_.py  a79dc5a770c6_.py
src/app/infra/framework/sql_alchemy/table/: __init__.py  all.py  credentials.py  user.py
src/app/infra/presentation/fastapi/: exception.py  model.py
src/app/infra/presentation/fastapi/adapter/: __init__.py  blacklist_gateway.py  credentials_gateway.py  hasher.py  token.py
src/app/infra/presentation/fastapi/handler/: __init__.py  ensure_auth.py  log_in.py  log_out.py  register.py
src/app/infra/presentation/fastapi/port/: __init__.py  blacklist_gateway.py  credentials_gateway.py  hasher.py  token.py
src/app/infra/user/: repository.py
src/app/infra/user/reader/: __init__.py  mapper.py  reader.py
src/app/main/: rest.py
src/app/main/ioc/: __init__.py  common.py  config.py  framework.py  presentation.py  providers.py  user.py
src/app/presentation/fastapi/: main_router.py  security.py
src/app/presentation/fastapi/account/: __init__.py  endpoint.py  schema.py
src/app/presentation/fastapi/adapter/: __init__.py  actor_provider.py
src/app/presentation/fastapi/health/: __init__.py  endpoint.py
src/app/presentation/fastapi/middleware/: __init__.py  log.py
src/app/presentation/fastapi/schema/: __init__.py  error.py  ok.py
tests/unit/: conftest.py
tests/unit/user/service/: test_user_domain_service.py
