[project]
name = "fastapitemplate"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
  { name = "Ivan", email = "dev.ivanzakharov`@gmail.com" },
]
dependencies = [
  "adaptix>=3.0.0b12",
  "alembic>=1.18.4",
  "argon2-cffi>=25.1.0",
  "asgi-correlation-id>=5.0.1",
  "dishka>=1.10.1",
  "fastapi>=0.137.1",
  "fastapi-error-map>=0.9.10",
  "orjson>=3.11.9",
  "psycopg[binary]>=3.3.4",
  "pyaml>=26.2.1",
  "pyjwt>=2.13.0",
  "redis>=8.0.0",
  "sqlalchemy>=2.0.51",
  "structlog>=26.1.0",
  "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
  "pre-commit>=4.6.0",
  "pyrefly>=1.0.0",
  "pytest>=9.1.0",
  "pytest-asyncio>=1.4.0",
  "ruff>=0.15.17",
  "tombi>=1.1.3",
  "typos>=1.47.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pyrefly]
search-path = ["src/"]
python-version = "3.14"
project-excludes = ["**/migration*/**", "**/migration*"]
preset = "strict"

[tool.pytest]
addopts = ["--color=yes", "-mnot(slow)", "-pno:cacheprovider"]
filterwarnings = []
markers = ["slow"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
select = [
  "A",  # flake8-builtins
  "ASYNC",  # flake8-async
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "C90",  # mccabe
  "DTZ",  # flake8-datetimez
  "E",  # pycodestyle (Error)
  "EXE",  # flake8-executable
  "F",  # Pyflakes
  "FAST",  # FastAPI
  "FLY",  # flynt
  "FURB",  # refurb
  "G",  # flake8-logging-format
  "I",  # isort
  "INT",  # flake8-gettext
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "N",  # pep8-naming
  "PERF",  # Perflint
  "PL",  # pylint
  "PLE",  # Pylint (error)
  "PLR5501",  # Pylint Refactor: collapsible-else-if
  "PT",  # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "Q",  # flake8-quotes
  "RSE",  # flake8-raise (RSE)
  "RUF",  # Ruff-specific rules
  "S",  # flake8-bandit
  "SIM",  # flake8-simplify
  "SLF",  # flake8-self (SLF)
  "SLOT",  # flake8-slots
  "T10",  # flake8-debugger
  "T20",  # flake8-print
  "TC",  # flake8-type-checking
  "TID",  # flake8-tidy-imports
  "UP",  # pyupgrade
  "W",  # pycodestyle (Warning)
]
ignore = [
  "PLR0913",  # too-many-arguments
  "PLR0917",  # too-many-positional-arguments
  "PLR6301",  # no-self-use
  "RUF001",  # ambiguous-unicode-character-string (cyrillic)
  "RUF002",  # ambiguous-unicode-character-docstring (cyrillic)
  "RUF003",  # ambiguous-unicode-character-comment (cyrillic)
  "S311",  # suspicious-non-cryptographic-random-usage
  "TC001",  # typing-only-first-party-import
  "TC002",  # typing-only-third-party-import
  "TC003",  # typing-only-standard-library-import
  "TC006",  # runtime-cast-value
  "N818",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ARG002",  # unused-method-argument
  "PLC2801",  # unnecessary-dunder-call
  "PLR2004",  # magic-value-comparison
  "PT011",  # pytest-raises-too-broad
  "S101",  # assert
  "S105",  # hardcoded-password-string
  "S106",  # hardcoded-password-func-arg
  "S107",  # hardcoded-password-default
  "SIM300",  # yoda-conditions
]
